samples/_failures_safe/1761204821_f4399d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e9faee2.c: In function ‘main’:
./samples/SAFE/__tmp_8e9faee2.c:160:5: error: expected expression at end of input
  160 |     uint8_t test_data3[] =
      |     ^~~~~~~
./samples/SAFE/__tmp_8e9faee2.c:160:5: error: expected declaration or statement at end of input
